# react-router-axum-template

./: README.md
backend/: Cargo.toml  Readme.md
backend/src/: main.rs
backend/src/services/: hello.rs
frontend/: README.md  package-lock.json  package.json
frontend/app/lib/: client.ts
frontend/app/lib/api/: v1.d.ts
frontend/app/routes/: home.tsx
frontend/app/welcome/: welcome.tsx
