[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.5", features = ["axum"] }
axum = "0.7.9"
dotenv = "0.15.0"
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }    
