[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }    
utoipa = "5.3.0"
utoipa-axum = "0.1.3"
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
